fix(bugs):优化 sendBeacon 请求解析逻辑
- 统一使用 coBody 解析请求体
- 增强 isPing 判断条件，确保准确识别 sendBeacon 请求- 修复 JSON 解析错误处理逻辑
- 调整 projectId 类型为 number 以匹配数据库字段
- 更新测试页面，添加错误触发按钮用于调试
- 修改类型定义，确保 projectId 类型一致性

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>libraryStarter</title>
+    <title>BetterMonitor Test Page</title>
     <link rel="shortcut icon" href="/logo.svg" >
   </head>
-  <body></body>
-  <script></script>
+  <body>
+  <button id="btnNormalError">Create Normal Error</button>
+  <button id="btnUnhandledRejection">Create Unhandled Promise Rejection</button>
+  </body>
+  <script>
+    window.addEventListener('load', function () {
+      document.getElementById('btnNormalError').addEventListener('click', function () {
+        throw new Error('This is a normal error');
+      });
+      document.getElementById('btnUnhandledRejection').addEventListener('click', function () {
+        Promise.reject(new Error('This is an unhandled promise rejection'));
+      })
+    });
+  </script>
 </html>
