--- a/public/index.html
+++ b/public/index.html
@@ -1,72 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BetterMonitor Test Page</title>
-    <link rel="shortcut icon" href="/logo.svg" >
-  </head>
-  <body>
-  <button id="btnAddView">addView</button>
-  <button id="btnNormalError">Create Normal Error</button>
-  <button id="btnUnhandledRejection">Create Unhandled Promise Rejection</button>
-  <button id="btnPrintLog">printLog</button>
-  <button id="btnPrintLogDirectly">printLogDirectly</button>
-  <button id="btnPrintWarn">printWarn</button>
-  <button id="btnPrintWarnDirectly">printWarnDirectly</button>
-  <button id="btnPrintError">printError</button>
-  <button id="btnPrintErrorDirectly">printErrorDirectly</button>
-  <button id="btnLogTime">logTime + logTimeEnd</button>
-  <button id="btnLogTimeDirectly">logTime + logTimeEndDirectly</button>
-  <button id="btnSendAjax">send ajax request</button>
-  </body>
-  <script>
-    window.addEventListener('load', function () {
-      document.getElementById('btnAddView').addEventListener('click', function () {
-        location.reload()
-      })
-      document.getElementById('btnNormalError').addEventListener('click', function () {
-        throw new Error('This is a normal error');
-      });
-      document.getElementById('btnUnhandledRejection').addEventListener('click', function () {
-        Promise.reject(new Error('This is an unhandled promise rejection'));
-      })
-      document.getElementById('btnPrintLog').addEventListener('click', function () {
-        BetterMonitor.printLog('This is a log');
-      });
-      document.getElementById('btnPrintLogDirectly').addEventListener('click', function () {
-        BetterMonitor.printLogDirectly('This is a log');
-      });
-      document.getElementById('btnPrintWarn').addEventListener('click', function () {
-        BetterMonitor.printWarn('This is a warn');
-      })
-      document.getElementById('btnPrintWarnDirectly').addEventListener('click', function () {
-        BetterMonitor.printWarnDirectly('This is a warn');
-      })
-      document.getElementById('btnPrintError').addEventListener('click', function () {
-        BetterMonitor.printError('This is an error');
-      })
-      document.getElementById('btnPrintErrorDirectly').addEventListener('click', function () {
-        BetterMonitor.printErrorDirectly('This is an error');
-      })
-      document.getElementById('btnLogTime').addEventListener('click', function () {
-        const label = BetterMonitor.logTime('logTime + logTimeEnd');
-        setTimeout(function () {
-          BetterMonitor.logTimeEnd(label);
-        }, 1000);
-      })
-      document.getElementById('btnLogTimeDirectly').addEventListener('click', function () {
-        const label = BetterMonitor.logTime('logTime + logTimeEndDirectly');
-        setTimeout(function () {
-          BetterMonitor.logTimeEndDirectly(label);
-        }, 1000);
-      })
-      document.getElementById('btnSendAjax').addEventListener('click', function () {
-        const xhr = new XMLHttpRequest();
-        xhr.open('GET', 'https://www.baidu.com');
-        xhr.send();
-      })
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BetterMonitor Test Page</title>
+  <link rel="shortcut icon" href="/logo.svg" >
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      padding: 20px;
+      color: #333;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+      color: white;
+      text-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    .subtitle {
+      font-size: 1.1rem;
+      opacity: 0.9;
+    }
+
+    .buttons-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .button-group {
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(4px);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .button-group:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
+    }
+
+    .group-title {
+      font-size: 1.2rem;
+      font-weight: 600;
+      margin-bottom: 15px;
+      color: #4a5568;
+      padding-bottom: 10px;
+      border-bottom: 2px solid #e2e8f0;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
+      padding: 12px 20px;
+      margin-bottom: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+
+    .btn:last-child {
+      margin-bottom: 0;
+    }
+
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .btn:active {
+      transform: translateY(0);
+    }
+
+    .btn-primary {
+      background: #4299e1;
+      color: white;
+    }
+
+    .btn-primary:hover {
+      background: #3182ce;
+    }
+
+    .btn-danger {
+      background: #e53e3e;
+      color: white;
+    }
+
+    .btn-danger:hover {
+      background: #c53030;
+    }
+
+    .btn-warning {
+      background: #dd6b20;
+      color: white;
+    }
+
+    .btn-warning:hover {
+      background: #c05621;
+    }
+
+    .btn-success {
+      background: #38a169;
+      color: white;
+    }
+
+    .btn-success:hover {
+      background: #2f855a;
+    }
+
+    .btn-info {
+      background: #319795;
+      color: white;
+    }
+
+    .btn-info:hover {
+      background: #285e61;
+    }
+
+    .btn-light {
+      background: #e2e8f0;
+      color: #4a5568;
+    }
+
+    .btn-light:hover {
+      background: #cbd5e0;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 40px;
+      color: rgba(255, 255, 255, 0.7);
+      font-size: 0.9rem;
+    }
+
+    @media (max-width: 768px) {
+      .buttons-grid {
+        grid-template-columns: 1fr;
+      }
+
+      h1 {
+        font-size: 2rem;
+      }
+    }
+  </style>
+</head>
+<body>
+<div class="container">
+  <header>
+    <h1>BetterMonitor Test Page</h1>
+    <p class="subtitle">Click buttons below to test different monitoring capabilities</p>
+  </header>
+
+  <div class="buttons-grid">
+    <div class="button-group">
+      <div class="group-title">Page Actions</div>
+      <button id="btnAddView" class="btn btn-primary">Add View (Reload Page)</button>
+    </div>
+
+    <div class="button-group">
+      <div class="group-title">Error Generation</div>
+      <button id="btnNormalError" class="btn btn-danger">Trigger ErrorEvent</button>
+      <button id="btnUnhandledRejection" class="btn btn-danger">Trigger PromiseRejectionEvent</button>
+    </div>
+
+    <div class="button-group">
+      <div class="group-title">Logging Functions</div>
+      <button id="btnPrintLog" class="btn btn-light">Print Log</button>
+      <button id="btnPrintLogDirectly" class="btn btn-light">Print Log Directly</button>
+      <button id="btnPrintWarn" class="btn btn-warning">Print Warning</button>
+      <button id="btnPrintWarnDirectly" class="btn btn-warning">Print Warning Directly</button>
+      <button id="btnPrintError" class="btn btn-danger">Print Error</button>
+      <button id="btnPrintErrorDirectly" class="btn btn-danger">Print Error Directly</button>
+    </div>
+
+    <div class="button-group">
+      <div class="group-title">Performance Timing</div>
+      <button id="btnLogTime" class="btn btn-info">Log Time + End (1s delay)</button>
+      <button id="btnLogTimeDirectly" class="btn btn-info">Log Time + End Directly</button>
+    </div>
+
+    <div class="button-group">
+      <div class="group-title">Network Requests</div>
+      <button id="btnSendAjax" class="btn btn-success">Send AJAX Request</button>
+    </div>
+  </div>
+
+  <div class="footer">
+    <p>BetterMonitor Testing Interface</p>
+  </div>
+</div>
+
+<script>
+  window.addEventListener('load', function () {
+    document.getElementById('btnAddView').addEventListener('click', function () {
+      location.reload()
+    })
+    document.getElementById('btnNormalError').addEventListener('click', function () {
+      throw new Error('This is a normal error');
     });
-  </script>
+    document.getElementById('btnUnhandledRejection').addEventListener('click', function () {
+      Promise.reject(new Error('This is an unhandled promise rejection'));
+    })
+    document.getElementById('btnPrintLog').addEventListener('click', function () {
+      BetterMonitor.printLog('This is a log');
+    });
+    document.getElementById('btnPrintLogDirectly').addEventListener('click', function () {
+      BetterMonitor.printLogDirectly('This is a log');
+    });
+    document.getElementById('btnPrintWarn').addEventListener('click', function () {
+      BetterMonitor.printWarn('This is a warn');
+    })
+    document.getElementById('btnPrintWarnDirectly').addEventListener('click', function () {
+      BetterMonitor.printWarnDirectly('This is a warn');
+    })
+    document.getElementById('btnPrintError').addEventListener('click', function () {
+      BetterMonitor.printError('This is an error');
+    })
+    document.getElementById('btnPrintErrorDirectly').addEventListener('click', function () {
+      BetterMonitor.printErrorDirectly('This is an error');
+    })
+    document.getElementById('btnLogTime').addEventListener('click', function () {
+      const label = BetterMonitor.logTime('logTime + logTimeEnd');
+      setTimeout(function () {
+        BetterMonitor.logTimeEnd(label);
+      }, 1000);
+    })
+    document.getElementById('btnLogTimeDirectly').addEventListener('click', function () {
+      const label = BetterMonitor.logTime('logTime + logTimeEndDirectly');
+      setTimeout(function () {
+        BetterMonitor.logTimeEndDirectly(label);
+      }, 1000);
+    })
+    document.getElementById('btnSendAjax').addEventListener('click', function () {
+      const xhr = new XMLHttpRequest();
+      xhr.open('GET', 'https://www.baidu.com');
+      xhr.send();
+    })
+  });
+</script>
+</body>
 </html>
