feat(bugs): 增加事件上报接口并优化消费者配置
- 新增 /addEvent 和 /addEventBeacon 接口用于事件上报- 调整 bugs-event 消费者启动配置，仅运行 bugs-event 模块
- 升级 pm2 依赖版本至 6.0.13 并更新相关子依赖- 在 consumeEventQueue 前增加日志记录
- 扩大事件载荷最大长度限制从50 到 100
- 在批量插入事件前增加日志打印详细列表信息- 移除废弃的 nssocket 及 blessed 相关旧版依赖包- 更新 proxy-agent、fast-json-patch 等多项依赖到最新版本
- 优化 package.json 中 dev:consumers 启动脚本环境变量设置

--- a/public/index.html
+++ b/public/index.html
@@ -213,6 +213,14 @@
       <div class="group-title">Network Requests</div>
       <button id="btnSendAjax" class="btn btn-success">Send AJAX Request</button>
     </div>
+
+    <!-- 在现有的 .buttons-grid 中添加新的按钮组 -->
+    <div class="button-group">
+      <div class="group-title">事件埋点</div>
+      <button id="btnTrackEvent" class="btn btn-primary">触发事件埋点</button>
+      <button id="btnTrackCustomEvent" class="btn btn-info">触发自定义事件埋点</button>
+    </div>
+
   </div>
 
   <div class="footer">
@@ -266,6 +274,19 @@
       xhr.open('GET', 'https://www.baidu.com');
       xhr.send();
     })
+    // 在 window.addEventListener('load', function () { ... }) 内添加以下代码
+    document.getElementById('btnTrackEvent').addEventListener('click', function () {
+      BetterMonitor.addEvent('user_click');
+    });
+
+    document.getElementById('btnTrackCustomEvent').addEventListener('click', function () {
+      BetterMonitor.addEvent('111222333', {
+        custom: true,
+        source: 'user_input',
+        value: Math.random()
+      });
+    });
+
   });
 </script>
 </body>
